// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364ArtifactHash27370636": Object {
      "Description": "Artifact hash for asset \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3BucketE5789813": Object {
      "Description": "S3 bucket for asset \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C": Object {
      "Description": "S3 key for asset version \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestConfigDFE7B72C": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3BucketE5789813",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364ArtifactHash27370636": Object {
      "Description": "Artifact hash for asset \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3BucketE5789813": Object {
      "Description": "S3 bucket for asset \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C": Object {
      "Description": "S3 key for asset version \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
    "AssetParametersf84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61aeArtifactHash420791BD": Object {
      "Description": "Artifact hash for asset \\"f84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61ae\\"",
      "Type": "String",
    },
    "AssetParametersf84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61aeS3Bucket1E85DB03": Object {
      "Description": "S3 bucket for asset \\"f84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61ae\\"",
      "Type": "String",
    },
    "AssetParametersf84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61aeS3VersionKey83BE7703": Object {
      "Description": "S3 key for asset version \\"f84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61ae\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3BucketE5789813",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61aeS3Bucket1E85DB03",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61aeS3VersionKey83BE7703",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf84f8dc310beb2bc257b40eb7d678d51b9af3cf1a3d704bb736adf7ba48c61aeS3VersionKey83BE7703",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"customUserAgent\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "index.handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2ArtifactHash36772F8E": Object {
      "Description": "Artifact hash for asset \\"04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2\\"",
      "Type": "String",
    },
    "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3Bucket0EF971F9": Object {
      "Description": "S3 bucket for asset \\"04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2\\"",
      "Type": "String",
    },
    "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3VersionKeyADEDF376": Object {
      "Description": "S3 key for asset version \\"04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364ArtifactHash27370636": Object {
      "Description": "Artifact hash for asset \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3BucketE5789813": Object {
      "Description": "S3 bucket for asset \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
    "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C": Object {
      "Description": "S3 key for asset version \\"7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3BucketE5789813",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters7741d2f5fc126aca95e3dc3caa1907c61a33aeb7734404c762d3fccb523fa364S3VersionKey7607563C",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3Bucket0EF971F9",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3VersionKeyADEDF376",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3VersionKeyADEDF376",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"user_agent_extra\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
